rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: demucs-rest
spec:
  selector:
    matchLabels:
      app: demucs-rest
  replicas: 1
  template:
    metadata:
      labels:
        app: demucs-rest
    spec:
      containers:
      - name: demucs-rest
        image: dharinidhba/demucs-rest:latest
#         image:gcr.io/programmablecloud/demucs-worker:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
          protocol: TCP
