rest/rest-ingress.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: demucs-rest-service
                port:
                  number: 5001
            path: /
            pathType: Prefix
---
    apiVersion: v1
    kind: Service
    metadata:
      name: demucs-rest-service
    spec:
      type: ClusterIP
      ports:
        - port: 5001
      selector:
        app: demucs-rest
